<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:layout_marginTop="16dp"
            >

            <!-- Header con Return, Level y botones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp">

                <LinearLayout
                    android:id="@+id/returnContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="4dp"
                    android:layout_marginEnd="16dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/back"
                        android:contentDescription="@string/return_button"
                        android:layout_marginEnd="6dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/return_button"
                        android:textSize="18sp"
                        android:textColor="#002C4D" />
                </LinearLayout>

                <TextView
                    android:id="@+id/levelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Level:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#002C4D"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/questionNumberTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#002C4D"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:id="@+id/wildcardButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/wild_icon"
                    android:contentDescription="Comodines"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="12dp"/>

                <ImageView
                    android:id="@+id/helpButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/help_icon"
                    android:contentDescription="Ayuda"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="6dp"/>

            </LinearLayout>

            <!-- Título principal -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_pronun_title"
                android:textSize="24sp"
                android:textColor="#002C4D"
                android:gravity="center"
                android:layout_marginBottom="24dp"/>

            <!-- Label de Tema -->
            <TextView
                android:id="@+id/topicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Tema / Topic:"
                android:textStyle="bold"
                android:textColor="#002C4D"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <!-- Card de instrucciones -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:background="@color/cardSena">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/crab_test"
                        android:visibility="gone"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@color/cardSena">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_pronunciation"
                            android:textSize="18sp"
                            android:textColor="#002C4D"
                            android:layout_marginBottom="16dp"/>

                        <TextView
                            android:id="@+id/referenceTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#002C4D"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_marginBottom="24dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/audioIcon"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:src="@drawable/ic_audio"
                                android:visibility="gone"
                                android:clickable="true"
                                android:focusable="true"
                                android:padding="8dp"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Botones de Start y Stop -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="24dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height_large"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:text="Comenzar / Start"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    app:icon="@drawable/play_record"
                    app:iconGravity="textEnd"
                    app:backgroundTint="@color/btn_tint_speaking_start" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/stopButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height_large"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:text="Detener / Stop"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    app:icon="@drawable/stop"
                    app:iconGravity="textEnd"
                    app:backgroundTint="@color/btn_tint_speaking_stop"
                    tools:ignore="DuplicateIds" />

            </LinearLayout>

            <!-- Card de resultados -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:background="@color/cardSena">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_pronun_answer"
                        android:textSize="18sp"
                        android:textColor="#002C4D"
                        android:gravity="center"
                        android:layout_marginBottom="16dp"/>

                    <TextView
                        android:id="@+id/recognizedTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:layout_marginBottom="12dp"/>

                    <TextView
                        android:id="@+id/resultTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_color"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Botón Next -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="Próximo / Next"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btn_tint_speaking_next"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>